<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/About_Activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_profile"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:layout_marginStart="29dp"
        android:lineSpacingExtra="5sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/profile_picture"
            app:civ_border_color="@color/accent_color"
            app:civ_border_width="5dp"
            tools:ignore="ImageContrastCheck" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="15dp">

        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/list_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="18dp"
                    android:contentDescription="@string/icon_email"
                    android:src="@drawable/icon_email"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_email"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/list_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="18dp"
                    android:contentDescription="@string/icon_phone_number"
                    android:src="@drawable/icon_phone"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_phone"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginBottom="10dp"
            app:cardBackgroundColor="@color/list_color">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="18dp"
                    android:contentDescription="@string/icon_address"
                    android:src="@drawable/icon_address"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_address"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>
</ScrollView>