<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_list_song"
    android:layout_gravity="center_horizontal"
    app:cardBackgroundColor="@color/list_color"
    android:layout_marginTop="10dp"
    app:cardElevation="10dp"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="7dp">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:id="@+id/iv_songs_artist_list"
                android:contentDescription="@string/artist_picture"
                android:src="@drawable/artist_evanescence"/>

        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="3dp"
            android:layout_marginStart="20dp">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                app:cardBackgroundColor="@color/accent_color"
                android:layout_marginTop="5dp"
                app:cardCornerRadius="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_songs_artist_list"
                    android:text="@string/artist_name"
                    android:textSize="11sp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_songs_title_list"
                android:text="@string/songs_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginTop="5dp"/>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>